--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="resource-grid" id="resourceGrid">
       <!-- Your existing 4 cards -->
       <div class="card" data-category="Study Materials">
-        <img src="java.jpg" alt="Java" class="card-image">
+        <img src="image/java.jpg" alt="Java" class="card-image">
         <h3>All java Notes</h3>
         <p>PDF summary of core concepts in Java.</p>
         <span class="tag">Study Materials</span>
