--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <!-- Place this just inside the <body> tag -->
   <div class="video-circle sticky-video">
     <video autoplay muted loop playsinline>
-      <source src="./image/sticky video.mp4" type="video/mp4">
+      <source src="https://youtu.be/jPVI3cxXUw0?si=geHqXg4mYY_ngwt8" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
