--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
   <!-- Place this just inside the <body> tag -->
   <div class="video-circle sticky-video">
     <video autoplay muted loop playsinline>
-      <source src="./image/">
+      <source src="./image/WhatsApp Video 2025-05-26 at 1.35.53 PM.mp4">
       Your browser does not support the video tag.
     </video>
   </div>
