--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <a href="http://localhost/virtualclassroom-php/student_dashboard/dashboard.php">HOME</a>
   <div class="container">
     <header>
       <h1>📚 Learning Resources Repository</h1>
