--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-   <link rel="stylesheet" href="http://localhost/virtualclassroom-php/student_dashboard/dashboard.php" value="Home">
+  <button><a href="http://localhost/virtualclassroom-php/student_dashboard/dashboard.php">HOME</a></button>
   <div class="container">
     <header>
       <h1>📚 Learning Resources Repository</h1>
