--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <button><a href="http://localhost/virtualclassroom-php/student_dashboard/dashboard.php">HOME</a></button>
+  <a href="http://localhost/virtualclassroom-php/student_dashboard/dashboard.php"><button>HOME</button></a>
   <div class="container">
     <header>
       <h1>📚 Learning Resources Repository</h1>
