--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <title>Learning Resources Repository</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-
+  
 <body>
-  <a href="http://localhost/virtualclassroom-php/student_dashboard/dashboard.php"><button>HOME</button></a>
+  <a href="http://localhost/virtualclassroom-php/student_dashboard/dashboard.php" id="addBtns"><button>HOME</button></a>
   <div class="container">
     <header>
       <h1>📚 Learning Resources Repository</h1>
