--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
   
 <body>
-  <a href="http://localhost/virtualclassroom-php/student_dashboard/dashboard.php" id="addBtns"><button>HOME</button></a>
+  <a href="http://localhost/virtualclassroom-php/student_dashboard/dashboard.php" id="addBtns">HOME</a>
   <div class="container">
     <header>
       <h1>📚 Learning Resources Repository</h1>
@@ -71,6 +71,15 @@
         <p>High-quality UI/UX design templates ready to use for prototyping.</p>
         <span class="tag">Design</span>
         <a href="https://www.figma.com/community" target="_blank">Explore Figma</a>
+      </div>
+    </div>
+
+    <div class="card" data-category="Design">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQfTXeaOaxMaY0km2yQtfW0FO6hSkUZbGMXvQ&s" alt="Java" class="card-image">
+        <h3>DATA MINING & WAREHOUSING</h3>
+        <p>Data Mining overview, Data Warehouse and OLAP Technology.</p>
+        <span class="tag">E-Books</span>
+      <a href="https://drive.google.com/file/d/1DqzS1jGteQpz3QxXzmKoLXuweBAfyXaw/view?usp=drive_link" target="_blank">Download</a>
       </div>
     </div>
     <!-- === End of resource grid === -->
